extends Control


func _on_start_button_pressed() -> void:
	pass # Replace with function body.


func _on_warrior_button_pressed() -> void:
	pass # Replace with function body.


func _on_wizard_button_pressed():
	pass # Replace with function body.


func _on_assassin_button_pressed():
	pass # Replace with function body.
